Created modules for core, javafx, swing
Still WIP, but basic outline is good I think